...
        modifier = modifier
            .fillMaxSize(),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {

        Toolbar(
            text = "Details",
            modifier = Modifier
                .padding(vertical = 15.dp),
            showBackButton = true,
            onBackButtonClick = onBackClick
        )

...
