...
    Column(
        modifier = modifier
            .padding(horizontal = 10.dp)
            .fillMaxSize()
    ) {
        Toolbar(
            text = "Contacts",
            modifier = Modifier
                .padding(vertical = 15.dp),
            onBackButtonClick = {}
        )

        when (state) {
...
